# SmartPowerElectricAPI/Controllers/TrabajadorController.cs
@@ -139,7 +139,7 @@ namespace SmartPowerElectricAPI.Controllers
             {
                 List<Expression<Func<Trabajador, bool>>> where = new List<Expression<Func<Trabajador, bool>>>();
                 where.Add(x => x.Nombre.ToLower() == trabajadorDTO.Nombre.ToLower());
-                where.Add(x => x.Apellido.ToLower() == trabajadorDTO.Apellido.ToLower());
+                where.Add(x => x.Apellido.ToLower() == trabajadorDTO.Apellido.ToLower());                
                 Trabajador trabajadorSearch = _trabajadorRepository.Get(where).FirstOrDefault();
 
                 if (trabajadorSearch == null)
