# SmartPowerElectricAPI/Models/Cliente.cs
@@ -23,4 +23,6 @@ public class Cliente
 
     public bool? Eliminado { get; set; }
 
+    public virtual ICollection<Proyecto> Proyectos { get; set; }
+
 }
